# mp4-py

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  Makefile  README.md  VERSION  deps.json  pyproject.toml
.github/workflows/: wheel.yml
examples/: demux.py  remux.py  version.py
issues/: infinite-loop-with-corrupted-mp4.md  panic-at-boxes-rs-codec-init-size.md
src/: mp4_ext.cpp
src/mp4/: __init__.py  _c_api.py  _demux.py  _mux.py  _types.py
tests/: conftest.py  prop_complex.py  prop_context_manager.py  prop_edge_cases.py  prop_error.py  prop_moov_size.py  prop_roundtrip.py  prop_sample_entry.py  prop_timestamp.py  test_free_threading.py  test_fuzzing.py  test_mp4.py  test_pbt.py
