[project]
name = "mp4-py"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dynamic = ["version"]
description = "Python bindings for mp4-rust"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.12"

[project.urls]
Source = "https://github.com/shiguredo/mp4-py"
Discord = "https://discord.gg/shiguredo"

[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
test = ["pytest", "pytest-timeout"]
lint = ["ruff", "ty"]

[tool.scikit-build]
minimum-version = "0.11"
sdist.include = ["VERSION"]
build-dir = "_build"

[tool.scikit-build.cmake]
version = ">=4.1"
args = ["-DCMAKE_BUILD_TYPE=Release"]

[tool.scikit-build.ninja]
version = ">=1.10"

[tool.scikit-build.wheel]
packages = ["src/mp4"]
expand-macos-universal-tags = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+)$"

[tool.uv]
package = false
managed = true
default-groups = ["test", "lint"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
