[build-system]
requires = ["scikit-build-core", "nanobind>=2.10.2"]
build-backend = "scikit_build_core.build"

[project]
name = "mp4-py"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dynamic = ["version"]
description = "Python bindings for mp4-rust"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.12"

[project.urls]
Source = "https://github.com/shiguredo/mp4-py"
Discord = "https://discord.gg/shiguredo"

[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "lint" }]
test = ["pytest", "pytest-timeout"]
lint = ["ruff", "ty"]

[tool.scikit-build]
minimum-version = "0.11.3"
sdist.include = ["VERSION"]
build-dir = "_build"

[tool.scikit-build.cmake]
version = ">=4.2"
args = ["-DCMAKE_BUILD_TYPE=Release"]
define = { "CMAKE_CXX_STANDARD" = "20" }

[tool.scikit-build.wheel]
packages = ["src/mp4"]
expand-macos-universal-tags = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+)$"

[tool.uv]
package = false
managed = true
python-preference = "only-managed"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
